--- a/row-adder-lite.html
+++ b/row-adder-lite.html
@@ -56,6 +56,7 @@
                     reflectToAttribute: false
                 }
             },
+
             ready: function() {
                 this.createUserComponent();
                 this.updateGrids();
@@ -97,7 +98,7 @@
 
                 this.setComponentPathProperty(el);
                 el.innercomponents = this.innercomponents;
-                el.setAttribute('path', this.path + this.id)
+                el.setAttribute('path', this.path + this.id);
                 Polymer.dom(this.root).appendChild(el);
             },
             toPascalCase: function(s) {
