Adding null content property handler

--- a/row-adder-lite.html
+++ b/row-adder-lite.html
@@ -64,7 +64,7 @@
             updateGrids: function() {
                 // add properties to the created element
                 for(var i = 0; i < this.componentProperties.length; i++) {
-                    if(this.componentProperties[i].name == 'display') {
+                    if(!!this.componentProperties[i] && this.componentProperties[i].name == 'display') {
                         var data = this.componentProperties[i].value;
                         for(var j = 0; j < data.length; j++) {
                             if(!!data[j].value) {
@@ -79,7 +79,7 @@
             setComponentProperties: function(el) {
                 // add properties to the created element
                 for(var i = 0; i < this.componentProperties.length; i++) {
-                    if(this.componentProperties[i].name == 'componentProperties') {
+                    if(!!this.componentProperties[i] && this.componentProperties[i].name == 'componentProperties') {
                         var data = this.componentProperties[i].value;
                         for(var j = 0; j < data.length; j++) {
                             el.setAttribute(this.toPascalCase(data[j].name), data[j].value);
