Adding null content property handler

--- a/row-adder-lite.html
+++ b/row-adder-lite.html
@@ -65,7 +65,7 @@
                 // add properties to the created element
                 for(var i = 0; i < this.componentProperties.length; i++) {
                     if(!!this.componentProperties[i] && this.componentProperties[i].name == 'display') {
-                        var data = this.componentProperties[i].value;
+                        var data = this.componentProperties[i].value || '';
                         for(var j = 0; j < data.length; j++) {
                             if(!!data[j].value) {
                                 var prop = '--' + this.toPascalCase(data[j].name);
@@ -80,7 +80,7 @@
                 // add properties to the created element
                 for(var i = 0; i < this.componentProperties.length; i++) {
                     if(!!this.componentProperties[i] && this.componentProperties[i].name == 'componentProperties') {
-                        var data = this.componentProperties[i].value;
+                        var data = this.componentProperties[i].value || '';
                         for(var j = 0; j < data.length; j++) {
                             el.setAttribute(this.toPascalCase(data[j].name), data[j].value);
                         }
